<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="p_movie">Popular Movies</string>
    <string name="s_hawk">Stock Hawk</string>
    <string name="b_it_bigger">Build it Bigger</string>
    <string name="material">Make Your App Material</string>
    <string name="go">Go Ubiquitous</string>
    <string name="capstone">Capstone </string>
</resources>
