<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#E0F2F1"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imsaddam.myappportfolio.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="12"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/title"
            />

        <Button
        android:layout_width="230dp"
            android:textColor="#FFF"
            android:id="@+id/button1"
        android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="40dp"
            android:background="#F44336"
            android:text="@string/p_movie"
        android:layout_gravity="center_horizontal"

        />

        <Button
            android:layout_width="230dp"
            android:textColor="#FFF"
            android:id="@+id/button2"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:background="#F44336"
            android:text="@string/s_hawk"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:layout_width="230dp"
            android:textColor="#FFF"
            android:id="@+id/button3"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:background="#F44336"
            android:text="@string/b_it_bigger"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:layout_width="230dp"
            android:textColor="#FFF"
            android:id="@+id/button4"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:background="#F44336"
            android:text="@string/material"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:layout_width="230dp"
            android:textColor="#FFF"
            android:id="@+id/button5"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:background="#F44336"
            android:text="@string/go"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:layout_width="230dp"
            android:textColor="#FFF"
            android:id="@+id/button6"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:background="#F44336"
            android:text="@string/capstone"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

</RelativeLayout>
